--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "angular2-hotkeys",
-    "version": "0.1.3",
+    "name": "ats-angular2-hotkeys",
+    "version": "0.1.6",
     "scripts": {
         "test": "tsc && karma start",
         "prepublish": "tsc",
@@ -10,6 +10,7 @@
         "type": "git",
         "url": "git@github.com:brtnshrdr/angular2-hotkeys.git"
     },
+
     "author": {
         "name": "Nick Richardson",
         "email": "nick.richardson@mediapixeldesign.com"
